# ActCLI-Bench

./: .gitignore  AGENTS.md  ActCLI-Bench_ status_and_next_steps.md  CLAUDE.md  INVENTORY.sha256.txt  INVENTORY.txt  README.md  pyproject.toml
ActCLI-Round-Table/: Initial-Discussion.md  README.md  frontend_spec.md
ActCLI-Round-Table/mock_backend/: main.py  requirements.txt
archive/: README.md
docs/: ACTCLI-TE_TRACKING.md  CURSOR_POSITIONING_RESEARCH.md  CURSOR_RESEARCH_FINDINGS.md  FORK_PYTE_FEASIBILITY.md  INSTRUMENTATION_REFACTOR.md  INVESTIGATION_FINDINGS.md  POSTMORTEM_CURSOR_PTY.md  PYTE_FORK_GUIDE.md  PYTE_INVESTIGATION_SUMMARY.md  REVERSE_VIDEO_CURSOR_SOLUTION.md  WRAPPER_TESTING_GUIDE.md  pyte-patch-plan.md  round-table-integration.md  shell-framework.md  terminal-engine-roadmap.md
docs/Trouble-Snaps/: troubleshooting_pack_20251021T034454Z.txt  troubleshooting_pack_20251021T134022Z.txt  troubleshooting_pack_20251022T043042Z.txt  troubleshooting_pack_20251022T220235Z.txt  troubleshooting_pack_20251022T222119Z.txt  troubleshooting_pack_20251022T222858Z.txt  troubleshooting_pack_20251022T222932Z.txt  troubleshooting_pack_20251024T201312Z.txt  (+3 more)
evidence/: 04_no_diagnostics_hardcoded_export_path.txt  05_direct_builder_export.txt
tests/: conftest.py  diagnostic_cursor_mock.py  interactive_cursor_test.py  pyte_cursor_investigation.py  test_byte_corruption.py
tools/: README.md  analyze_escape_sequences.py  capture_full_sequences.py  diagnose_pyte_bug.py  example_pyte_fix.py  implement_visual_cursor.py  patch_full_logging.sh  start_pyte_fork.sh
(+165 files in other folders)
