[project]
name = "actcli-bench"
version = "0.0.0"
description = "Facilitator + wrappers + bench UIs for ActCLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
tui = ["prompt_toolkit>=3.0.43", "pyte>=0.8.1"]
textual = ["textual>=0.50.0"]
auth = ["keyring>=25.0.0"]

[project.scripts]
actcli-wrap = "actcli.wrapper.wrap_cli:app"
actcli-facilitator = "actcli.wrapper.facilitator_cli:app"
actcli-shell = "actcli.wrapper_tui.shell:main"
actcli-bench = "actcli.bench_textual.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actcli"]

